# labl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: home.html
docs/: index.md
docs/assets/: home.html
docs/notebooks/: edit_analysis.ipynb  quickstart.ipynb
examples/unsup_wqe/: README.md  pyproject.toml  requirements.txt
examples/unsup_wqe/scripts/: 00-sync_cluster.sh  01-run_aya.sh  02-run_xcomet.sh  compute_metrics_performance.py  compute_qe4pe_metric_correlations.py  compute_qe4pe_metrics_correlations.py  compute_unsupervised_metrics.py  compute_unsupervised_metrics_f4_nc.py  compute_unsupervised_metrics_f8_nc.py  compute_xcomet_metrics.py
examples/unsup_wqe/unsup_wqe/: __init__.py  data_utils.py  model_utils.py  prompt_utils.py  step_functions.py  xcomet_continuous.py  xcomet_lite.py
intrinsic_qe/: __init__.py  qe_dataset.py
labl/commands/: cli.py
labl/data/: base_sequence.py  edited_dataset.py  edited_entry.py  labeled_dataset.py  labeled_entry.py  labeled_interface.py
labl/datasets/: __init__.py
labl/utils/: cache.py  span.py  token.py  tokenizer.py  transform.py  typing.py
notebooks/edit_analysis/: index.html
notebooks/quickstart/: index.html
search/: search_index.json
test/: test_qe_dataset.py
tests/: test_edited_entry.py  test_qe_dataset.py  test_span.py  test_token.py  test_tokenizer.py  test_transform.py  test_wqe_entry.py
wqe/: __init__.py
wqeval/: __init__.py
(+58 files in other folders)
