[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unsup_wqe"
version = "0.0.1"
description = "Unsupervised Word-level Quality Estimation For Neural Machine Translation"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["unsup_wqe"]
